--- a/CG2.vcxproj.filters
+++ b/CG2.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="016.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="017.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="vertex.glsl">
