--- a/CG2.vcxproj.filters
+++ b/CG2.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="017.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="homework.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="vertex.glsl">
@@ -54,6 +57,9 @@
       <Filter>소스 파일</Filter>
     </None>
     <None Include="002v.glsl">
+      <Filter>소스 파일</Filter>
+    </None>
+    <None Include="h_vertex.glsl">
       <Filter>소스 파일</Filter>
     </None>
   </ItemGroup>
