--- a/CG2.vcxproj.filters
+++ b/CG2.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="homework.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="024.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="vertex.glsl">
@@ -60,6 +63,12 @@
       <Filter>소스 파일</Filter>
     </None>
     <None Include="h_vertex.glsl">
+      <Filter>소스 파일</Filter>
+    </None>
+    <None Include="light_vertex.glsl">
+      <Filter>소스 파일</Filter>
+    </None>
+    <None Include="light_fragment.glsl">
       <Filter>소스 파일</Filter>
     </None>
   </ItemGroup>
